--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,27 @@ rvm:
   - 2.0.0
   - jruby-19mode
   - jruby-20mode
+  - rbx-19mode
+  - rbx-20mode
 jdk:
   - oraclejdk7
   - openjdk7
+matrix:
+  exclude:
+    - rvm: 1.9.3
+      jdk: oraclejdk7
+    - rvm: 1.9.3
+      jdk: openjdk7
+    - rvm: 2.0.0
+      jdk: oraclejdk7
+    - rvm: 2.0.0
+      jdk: openjdk7
+    - rvm: rbx-19mode
+      jdk: oraclejdk7
+    - rvm: rbx-19mode
+      jdk: openjdk7
+    - rvm: rbx-20mode
+      jdk: oraclejdk7
+    - rvm: rbx-20mode
+      jdk: openjdk7
+
