before_install.sh not executable

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,5 @@ matrix:
     - rvm: rbx-20mode
       jdk: openjdk7
 
-before_install: ./before_install.sh
+before_install: sh ./before_install.sh
 
