--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ rvm:
   - 2.0.0
   - jruby-19mode
   - jruby-20mode
-  - rbx-19mode
-  - rbx-20mode
+  - rbx
+  - rbx-2
 jdk:
   - oraclejdk7
   - openjdk7
@@ -17,7 +17,9 @@ matrix:
       jdk: openjdk7
     - rvm: rbx-19mode
       jdk: openjdk7
-    - rvm: rbx-20mode
+    - rvm: rbx
+      jdk: openjdk7
+    - rvm: rbx-2
       jdk: openjdk7
 
 before_install: sh ./before_install.sh
