--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: ruby
 rvm:
   - 1.9.3
   - 2.0.0
+  - 2.1.0
   - jruby-19mode
-  - jruby-20mode
-  - rbx
   - rbx-2
+  - jruby-head
 jdk:
   - oraclejdk7
   - openjdk7
@@ -15,9 +15,7 @@ matrix:
       jdk: openjdk7
     - rvm: 2.0.0
       jdk: openjdk7
-    - rvm: rbx-19mode
-      jdk: openjdk7
-    - rvm: rbx
+    - rvm: 2.1.0
       jdk: openjdk7
     - rvm: rbx-2
       jdk: openjdk7
